--- a/.env
+++ b/.env
@@ -6,4 +6,47 @@ RPC_ENDPOINT=https://prettiest-alpha-layer.solana-mainnet.quiknode.pro/299c8791d
 RPC_WEBSOCKET_ENDPOINT=wss://prettiest-alpha-layer.solana-mainnet.quiknode.pro/299c8791dd626fb1352a0fd06e92afe2b95aa3cc
 
 # track token info
-TOKEN_ADDRESS1=Cuf4yovbYos1UEBFS9ZKr4iaUeGW3oNaj5nLvCqCpump
+TOKEN_ADDRESS1=6yd6KctS9GQGir3CZUAnSzos5EDH5a232f56ukLKpump
+
+# Bot
+LOG_LEVEL=trace
+ONE_TOKEN_AT_A_TIME=false
+PRE_LOAD_EXISTING_MARKETS=false
+CACHE_NEW_MARKETS=false
+# default or warp or jito
+TRANSACTION_EXECUTOR=jito
+# if using default executor, fee below will be applied
+COMPUTE_UNIT_LIMIT=101337
+COMPUTE_UNIT_PRICE=421197
+# if using warp or jito executor, fee below will be applied
+CUSTOM_FEE=0.006
+
+# Buy
+QUOTE_MINT=USDC
+QUOTE_AMOUNT=0.001
+AUTO_BUY_DELAY=0
+MAX_BUY_RETRIES=10
+BUY_SLIPPAGE=20
+
+# Sell
+AUTO_SELL=true
+MAX_SELL_RETRIES=10
+AUTO_SELL_DELAY=0
+PRICE_CHECK_INTERVAL=2000
+PRICE_CHECK_DURATION=600000
+TAKE_PROFIT=40
+STOP_LOSS=20
+SELL_SLIPPAGE=20
+
+# Filters
+USE_SNIPE_LIST=false
+SNIPE_LIST_REFRESH_INTERVAL=30000
+FILTER_CHECK_DURATION=60000
+FILTER_CHECK_INTERVAL=2000
+CONSECUTIVE_FILTER_MATCHES=3
+CHECK_IF_MUTABLE=false
+CHECK_IF_MINT_IS_RENOUNCED=true
+CHECK_IF_FREEZABLE=false
+CHECK_IF_BURNED=true
+MIN_POOL_SIZE=5
+MAX_POOL_SIZE=50
